--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Azure Static Web App</title>
+  <meta charset="UTF-8">
+  <title>My Azure Web Site</title>
   <style>
     body {
       display: flex;
-      height: 100vh;
       justify-content: center;
       align-items: center;
-      background-color: #e0f7fa;
-      font-family: sans-serif;
+      height: 100vh;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #74ebd5, #ACB6E5);
+    }
+    h1 {
+      font-size: 48px;
+      color: #2c3e50;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+    }
+  </style>
+</head>
+<body>
+  <h1>Sri Ram Reddy Vangoor</h1>
+</body>
+</html>
